[gd_scene load_steps=4 format=3 uid="uid://c0halqfs0qu4a"]

[ext_resource type="Script" path="res://attacks/weapons/weapon_detecting.gd" id="1_2dmlv"]
[ext_resource type="PackedScene" uid="uid://cqthcjdpye8og" path="res://attacks/bullet.tscn" id="2_pgdy4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lrgyo"]
radius = 90.0

[node name="Weapon" type="Node2D"]
script = ExtResource("1_2dmlv")
projectile = ExtResource("2_pgdy4")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(64, 0)

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="TargetDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetDetection"]
shape = SubResource("CircleShape2D_lrgyo")

[connection signal="body_entered" from="TargetDetection" to="." method="_on_target_detection_body_entered"]
[connection signal="body_exited" from="TargetDetection" to="." method="_on_target_detection_body_exited"]
